--- a/contact.html
+++ b/contact.html
@@ -3,12 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/styles.css" />
+    <title>Contact us</title>
 </head>
 <body>
- <h1>Welcome to my homepage</h1>
-
+ <h1>Contact us</h1>
+ <p>
+    For more information about everything Croissant, <br>please 
+    Email us at<br>
+    <br>
+     <a href="mailto:hello@croissant.com">hello@croissant.com</a>
+     
+ </p>
+<footer>
+    <a href="/">Homepage</a>
+    <a href="/photo.html">Photo</a>
+    <a href="/contact.html"></a>
+</footer>
     
-<a href="index.html">Back to Homepage</a>
+
 </body>
 </html>
