--- a/index.html
+++ b/index.html
@@ -3,10 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/styles.css" />
+    <title>Croissant</title>
 </head>
 <body>
- <h1>About croissant</h1>  
+ <h1>  🥐 Croissant</h1> 
+ <p>
+     A croissant is a buttery, flaky, viennoiserie pastry.<br>
+      Croissants and other viennoiserie are made of a 
+      layered yeast-leavened dough.
+ </p> 
+ <footer>  
  <a href="/>Back to homepage"</a>
+ <a href="/photo.html"> Photo</a>
+ <a href="/contact.html"> Contact</a>
+ </footer>
 </body>
 </html>
